# simd-translator

./: .gitignore  CMakeLists.txt  README.md  run.sh
grammar/: Assembly.g4  SpecialAsm.g4
include/: CustomAssemblyVisitor.h  ExecutableGenerator.h  LabelVisitor.h
src/: CustomAssemblyVisitor.cpp  ExecutableGenerator.cpp  LabelVisitor.cpp  main.cpp
